--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:black;font-family:arial;color:white}
+h1{color:grey;font-family:verdana}
+.maindiv {
+    
+    background-color:white;
+    color:black;
+    width:500px;
+    padding:40px;
+    border-radius:25px;
+    margin: 50px 500px;
+}
+.ndiv {
+    padding: 40px;
+    margin: 25px;
 
+
+}
+
+footer{margin: auto}
 
